add: validateQueryMiddleware & and dashboard_callback_route route for register/confirm route
